fix z-index for header

--- a/src/components/core/header/header.scss
+++ b/src/components/core/header/header.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/variables.scss";
 
 .header {
-  z-index: 10;
+  z-index: 30;
   flex: 0 0 auto;
   background: $header-color;
   backdrop-filter: blur(30px);
